--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,18 @@
 body {
-    background-color: black;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(46,46,140,1) 45%, rgba(39,153,176,1) 100%);
 }
 
 #main-container {
     background-color: white;
     margin: auto;
     border-style: solid;
-    border-color: red;
+    border-width: 15px;
+    border-color: black;
     border-radius: 10px;
     display: grid;
     width: 600px;
-    height: 600px;
+    height: 450px;
 }
 
 .buttons {
@@ -24,6 +26,22 @@ body {
     width: 100px;
     text-align: center;
     margin: 20px;
+    background-color: black;
+    color: white;
+    border: none;
+    font-size: 20px;
+}
+
+#red {
+    color: red;
+}
+
+#blue {
+    color: blue;
+}
+
+#random {
+    background: linear-gradient(90deg, #FC466B 0%, #3F5EFB 100%);
 }
 
 .color {
