--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 body {
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(46,46,140,1) 45%, rgba(39,153,176,1) 100%);
+    background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
 }
 
 #main-container {
@@ -11,8 +10,8 @@ body {
     border-color: black;
     border-radius: 10px;
     display: grid;
-    width: 600px;
-    height: 450px;
+    width: 520px;
+    height: 520px;
 }
 
 .buttons {
@@ -25,19 +24,16 @@ body {
     height: 50px;
     width: 100px;
     text-align: center;
-    margin: 20px;
+    margin-right: 5px;
+    margin-top: 25px;
     background-color: black;
     color: white;
     border: none;
     font-size: 20px;
 }
 
-#red {
-    color: red;
-}
-
-#blue {
-    color: blue;
+.buttons button:hover {
+    text-shadow: 1px 1px 4px white;
 }
 
 #random {
